# curso_fastapi_dunossauro

./: .gitignore  README.md  pyproject.toml
src/tests/: test_app.py
